# slideshow

./: README.md  presentation.html  presentation.md
code/: construct_chart.ipynb
nbtools/: README.md  pyproject.toml
nbtools/src/nbtools/: __init__.py  export_cells.py  graphviz.py  mermaid.py
nbtools/tests/: conftest.py  test_export_cells.py  test_graphviz.py  test_mermaid.py
sample_notebooks/: construct_chart.ipynb
slideshows/: template.html  template.md
slideshows/theme/: huttley-lab.css
theme/: huttley-lab.css
